--- a/program_full_detail_draft.html
+++ b/program_full_detail_draft.html
@@ -18,6 +18,9 @@
     border-collapse: collapse;
     margin-bottom: 20px;
     font-family: sans-serif;
+    /* Allow horizontal scrolling on small screens */
+    overflow-x: auto;
+    display: block;
   }
 
   /* Specific styles for table headers and cells */
@@ -236,7 +239,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">11:20-11:55</td>
-      <td class="session-column"><span class="session-title">Session 1 - Spatial and Spatio-temporal Data and Language Models</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 1 - Spatial and Spatio-temporal Data and Language Models</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">SNC: A Framework for Verification and Generation of Spatial NLQ Corpora</span>
         Weijia Yi (Nanjing University of Aeronautics and Astronautics); Xieyang Wang (Nanjing University of Aeronautics and Astronautics); Mengyi Liu (Nanjing University of Aeronautics and Astronautics); Jianqiu Xu (Nanjing University of Aeronautics and Astronautics)  - LONG
@@ -245,7 +248,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">11:55-12:45</td>
-      <td class="session-column"><span class="session-title">Session 2 - Data Mining and Forecasting</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 2 - Data Mining and Forecasting</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">Multivariate Tests for Point and Probabilistic Forecasts, with an Application to Spatio-temporal Weather Forecast Evaluation</span> Annette Jing (Stanford University); Phillip Jang (Amazon) - LONG
         <span class="long-paper">Distributed Community Detection in Temporal Graphs</span> Konstantinos Christopoulos (University of Patras); Konstantinos Tsichlas (University of Patras) -  SHORT
@@ -266,7 +269,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">15:10-16:10</td>
-      <td class="session-column"><span class="session-title">Session 3 - Maritime Data</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 3 - Maritime Data</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">A Multi-Modal Knowledge-Enhanced Framework for Vessel Trajectory Prediction</span> Haomin Yu (Aalborg University); Tianyi Li (Aalborg University); Kristian Torp (Aalborg University); Christian S. Jensen (Aalborg University) - LONG
         <span class="long-paper">Physics-Informed Neural Networks for Vessel Trajectory Prediction: Learning Time-Discretized Kinematic Dynamics via Finite Differences</span> Md Mahbub Alam (Dalhousie University); José F. Rodrigues-Jr (University of Sao Paulo); Amilcar Soares-Jr (Linnaeus University); Gabriel Spadon (Dalhousie University) - LONG
@@ -317,7 +320,7 @@ Zezhi Shao (Institute of Computing Technology, Chinese Academy of Sciences)*; Ch
     </tr>
     <tr class="default">
       <td class="time-column">10:20–11.00</td>
-      <td class="session-column"><span class="session-title">Session 4 - Road Networks</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 4 - Road Networks</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">BRkNN-light: Batch Processing of Reverse k-Nearest Neighbor Queries for Moving Objects on Road Networks</span> Anbang Song (Yantai University); Ziqiang Yu (Yantai University); Wei Liu (Yantai University); Yating Xu (Yantai University); Mingjin Tao (Yantai University) - LONG
         <span class="long-paper">The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks</span> The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks 
@@ -389,7 +392,7 @@ Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria
   <tbody>
     <tr class="default">
       <td class="time-column">09:00–10:20</td>
-      <td class="session-column"><span class="session-title">Session 5 - Mobility Analysis and Industry</span><br>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 5 - Mobility Analysis and Industry</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">Scalable Processing of Moving Flock Patterns</span> Andres Oswaldo Calderon Romero (Pontificia Universidad Javeriana); Vassilis J. Tsotras (University of California); Petko Balakov (Esri); Marcos Vieira (Google) - LONG
         <span class="long-paper">Generalized Origin-Destination-Time Flow Patterns</span> Chrysanthi Kosyfaki (The University of Hong Kong ); Nikos Mamoulis (University of Ioannina); Reynold Cheng (The University of Hong Kong); Ben Kao (The University of Hong Kong) - LONG
@@ -415,7 +418,7 @@ Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria
     </tr>
     <tr class="default">
       <td class="time-column">13:05-14:05</td>
-      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><br/>Session chair: TBC</td>
+      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">ReefsDB: An Efficient Design and Implementation of Time-Series Store on SSDs</span>  Shuai Liu (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Ying Qiao (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Chang Leng (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Hongan Wang (The Institute of Software, Chinese Academy of Sciences (ISCAS)) - LONG
         <span class="long-paper">TIDE: Indexing Time Intervals by Duration and Endpoint</span> Kai Wang (HKUST); Moin Moti (HKUST); Dimitris Papadias (HKUST) - LONG
