--- a/program_full_detail_draft.html
+++ b/program_full_detail_draft.html
@@ -146,6 +146,12 @@
     border-bottom: 2px solid #005a8d;
     padding-bottom: 5px;
   }
+   /* Media query for smaller screens */
+  @media (max-width: 600px) {
+    .schedule-table {
+      width: 100%;
+    }
+  }
 </style>
 	</head>
 	<body class="is-preload">
