--- a/program_full_detail_draft.html
+++ b/program_full_detail_draft.html
@@ -26,7 +26,7 @@
   /* Specific styles for table headers and cells */
   .schedule-table th, .schedule-table td {
     border: 1px solid #dddddd;
-    padding: 8px; /* Reduced padding to save space */
+    padding: 4px; /* Reduced padding to save space */
     vertical-align: top;
 
   }
@@ -290,7 +290,7 @@
       <td class="time-column">16:30-17:55</td>
       <td class="session-column"><span class="session-title">Tutorial 2</span></td>
       <td class="details-column">
-        <span class="long-paper">Heterogeneity in Multivariate Time Series: Comprehensive Analysis and Adaptive Modeling</span> Heterogeneity in Multivariate Time Series: Comprehensive Analysis and Adaptive Modeling
+        <span class="long-paper">Heterogeneity in Multivariate Time Series: Comprehensive Analysis and Adaptive Modeling</span>
 Zezhi Shao (Institute of Computing Technology, Chinese Academy of Sciences)*; Chengqing Yu (Institute of Computing Technology, Chinese Academy of Sciences; University of Chinese Academy of Sciences); Fei Wang ( Institute of Computing Technology, Chinese Academy of Sciences)
 
       </td>
@@ -330,8 +330,7 @@ Zezhi Shao (Institute of Computing Technology, Chinese Academy of Sciences)*; Ch
       <td class="session-column"><span class="session-title">Session 4 - Road Networks</span><p>Session chair: TBC</p></td>
       <td class="details-column">
         <span class="long-paper">BRkNN-light: Batch Processing of Reverse k-Nearest Neighbor Queries for Moving Objects on Road Networks</span> Anbang Song (Yantai University); Ziqiang Yu (Yantai University); Wei Liu (Yantai University); Yating Xu (Yantai University); Mingjin Tao (Yantai University) - LONG
-        <span class="long-paper">The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks</span> The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks 
-Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria); Mario Nascimento (Northeastern University) - LONG
+        <span class="long-paper">The Batch Insertion Operator for Shared Mobility Route Planning on Time-Dependent Road Networks</span> Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria); Mario Nascimento (Northeastern University) - LONG
 
       </td>
     </tr>
@@ -363,8 +362,8 @@ Aaditya Mukherjee (University of Victoria); Sean Chester (University of Victoria
       <td class="time-column">15:50–18:30</td>
       <td class="session-column"><span class="session-title">Ph.D. Forum</span></td>
       <td class="details-column">
-        <span class="long-paper">Mario Nascimento (Northeastern University, Canada)</span> - Mentor
-<span class="long-paper">Hua Lu (Aalborg University, Denmark)</span> - Mentor
+        <span class="long-paper">Mentor: Mario Nascimento (Northeastern University, Canada)</span>
+<span class="long-paper">Mentor: Hua Lu (Aalborg University, Denmark)</span>
 <span class="long-paper">Towards Advanced Natural Language Interfaces for Moving Objects Databases</span> Xieyang Wang (Nanjing University of Aeronautics and Astronautics); Jianqiu Xu (Nanjing University of Aeronautics and Astronautics)*
 <span class="long-paper">CA-Gen: Trajectory Generation with Co-Movement Awareness</span> Ke Li (UESTC)*; Ziwen Chen (UESTC); Yoshiharu Ishikawa (Nagoya University)
 <span class="long-paper">Optimization of Exposure-Aware Routing for Vehicles and Pedestrians</span> Gurban Aliyev (University of Pisa)*
