--- a/program_full_detail_draft.html
+++ b/program_full_detail_draft.html
@@ -450,8 +450,10 @@ Zezhi Shao (Institute of Computing Technology, Chinese Academy of Sciences)*; Ch
       <td class="social-event" colspan="2">
         <p>EXPO 2025 Excursion: Transportation & guided tour</p>
         <ul>
-          <li>Bus leaves conference venue at 4pm and arrives at Expo at approximately 4:40pm</li>
-          <li>Bus leaves Expo at 9pm and arrives back at the conference venue at approximately 9:40pm</li>
+          <li>Bus leaves conference venue at 4pm</li>
+          <li>Bus arrives at Expo at ~4:40pm</li>
+          <li>Bus leaves Expo at 9pm</li> 
+      	  <li>Bus arrives back at the conference venue at ~9:40pm</li>
         </ul>
       </td>
     </tr>
