--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<div class="row">
 					<div class="col-5 col-12">
 						<ul>
+							<li>(01.08.2025) The <a href="./program_full_detail.html">detailed program</a> is now available!</li>
 							<li>(07.07.2025) Registration is now open! Early registration until July 15, 2025 (AoE): <a href="./registration.html">Registration Page</a></li>
 							<li>(03.07.2025) Accepted tutorials are now available: <a href="./tutorials.html">Accepted Tutorials</a></li>
 							<li>(30.06.2025) Accepted papers are now available: <a href="./papers.html">Accepted Papers</a></li>
