--- a/program_full_detail.html
+++ b/program_full_detail.html
@@ -159,6 +159,7 @@
       width: 100%;
     }
   }
+  
 </style>
 	</head>
 	<body class="is-preload">
@@ -253,7 +254,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">11:20-11:55</td>
-      <td class="session-column"><span class="session-title">Session 1 - Spatial and Spatio-temporal Data and Language Models</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 1 - Spatial and Spatio-temporal Data and Language Models</span><span class="author">Session Chair: Kyoungsook Kim, AIST, Japan</span></td>
       <td class="details-column">
         <span class="long-paper">SNC: A Framework for Verification and Generation of Spatial NLQ Corpora</span>
         <span class="author">Weijia Yi (Nanjing University of Aeronautics and Astronautics); Xieyang Wang (Nanjing University of Aeronautics and Astronautics); Mengyi Liu (Nanjing University of Aeronautics and Astronautics); Jianqiu Xu (Nanjing University of Aeronautics and Astronautics)  - LONG</span>
@@ -263,7 +264,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">11:55-12:45</td>
-      <td class="session-column"><span class="session-title">Session 2 - Data Mining and Forecasting</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 2 - Data Mining and Forecasting</span><span class="author">Session Chair: Panos Kalnis, KAUST, Saudi Arabia</span></td>
       <td class="details-column">
         <span class="long-paper">Multivariate Tests for Point and Probabilistic Forecasts, with an Application to Spatio-temporal Weather Forecast Evaluation</span> 
         <span class="author">Annette Jing (Stanford University); Phillip Jang (Amazon) - LONG</span>
@@ -287,7 +288,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">15:10-16:10</td>
-      <td class="session-column"><span class="session-title">Session 3 - Maritime Data</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 3 - Maritime Data</span><span class="author">Session Chair: Chiara Pugliese, IIT-CNR, Italy</span></td>
       <td class="details-column">
         <span class="long-paper">A Multi-Modal Knowledge-Enhanced Framework for Vessel Trajectory Prediction</span>
         <span class="author">Haomin Yu (Aalborg University); Tianyi Li (Aalborg University); Kristian Torp (Aalborg University); Christian S. Jensen (Aalborg University) - LONG</span>
@@ -341,7 +342,7 @@
     </tr>
     <tr class="default">
       <td class="time-column">10:20–11.00</td>
-      <td class="session-column"><span class="session-title">Session 4 - Road Networks</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 4 - Road Networks</span><span class="author">Session Chair: Aamir Cheema, Monash University, Australia</span></td>
       <td class="details-column">
         <span class="long-paper">BRkNN-light: Batch Processing of Reverse k-Nearest Neighbor Queries for Moving Objects on Road Networks</span> 
         <span class="author">Anbang Song (Yantai University); Ziqiang Yu (Yantai University); Wei Liu (Yantai University); Yating Xu (Yantai University); Mingjin Tao (Yantai University) - LONG</span>
@@ -423,7 +424,7 @@ Mentor: Hua Lu (Aalborg University, Denmark)</p></td>
   <tbody>
     <tr class="default">
       <td class="time-column">09:00–10:20</td>
-      <td class="session-column"><span class="session-title">Session 5 - Mobility Analysis and Industry</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 5 - Mobility Analysis and Industry</span><span class="author">Session Chair: Gabriel Spadon, Dalhousie University, Canada</span></td>
       <td class="details-column">
         <span class="long-paper">Scalable Processing of Moving Flock Patterns</span> 
         <span class="author">Andres Oswaldo Calderon Romero (Pontificia Universidad Javeriana); Vassilis J. Tsotras (University of California); Petko Balakov (Esri); Marcos Vieira (Google) - LONG</span>
@@ -451,7 +452,7 @@ Mentor: Hua Lu (Aalborg University, Denmark)</p></td>
     </tr>
     <tr class="default">
       <td class="time-column">13:05-14:05</td>
-      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><span class="author">Session chair: TBC</span></td>
+      <td class="session-column"><span class="session-title">Session 6 - Time Series and Interval Data</span><span class="author">Session Chair: Mario Nascimento, Northeastern University, Canada </span></td>
       <td class="details-column">
         <span class="long-paper">ReefsDB: An Efficient Design and Implementation of Time-Series Store on SSDs</span>  
         <span class="author">Shuai Liu (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Ying Qiao (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Chang Leng (The Institute of Software, Chinese Academy of Sciences (ISCAS)); Hongan Wang (The Institute of Software, Chinese Academy of Sciences (ISCAS)) - LONG</span>
