session detail with paper abstract

--- a/keynotes.html
+++ b/keynotes.html
@@ -80,7 +80,7 @@
 		<section id="keynotes" class="main">
 			<header>
 				<div class="container">
-					<h2 id="keynote1">Keynotes</h2>
+					<h2 >Keynotes</h2>
 				</div>
 			</header>
 			<div class="content style4">
@@ -94,7 +94,7 @@
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h4>Keynote 1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</h4>
+								<h4 id="keynote1">Keynote 1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</h4>
 									<p align="justify">
 										<span style="font-weight: bold;">Speaker:</span> Hirozumi Yamaguchi (Osaka University)
 									</p>
@@ -137,7 +137,7 @@ utilization, and privacy.
 In 2018, he was honored with the Commendation for Science and Technology by the
 Minister of Education, Culture, Sports, Science, and Technology. Since 2024, he
 has also been serving concurrently as the team leader for RIKEN R-CCS's
-large-scale digital twin research team.				<a id="keynote2"></a>	
+large-scale digital twin research team.				
 									</p> 
 							</section>
 
@@ -153,7 +153,7 @@ large-scale digital twin research team.				<a id="keynote2"></a>
 						</div>
 						<div class="col-10 col-12-narrow">
 							<section>
-								<h4>Keynote 2 &ndash; Mapping Cultural Values Across Regions for AI Alignment</h4>
+								<h4 id="keynote2">Keynote 2 &ndash; Mapping Cultural Values Across Regions for AI Alignment</h4>
 								<p align="justify">
 										<span style="font-weight: bold;">Speaker: </span>  Xing Xie (Microsoft Research Asia)
 									</p>
