--- a/papers.html
+++ b/papers.html
@@ -117,7 +117,7 @@
 								</li>
 			            		</ul>
 			            		</p>
-			            		<header><h3>Demo Track</h3></header>
+			            		<header><h3 id="demo">Demo Track</h3></header>
 			            		<p>
 			            		<ul>
 			            		<li><h5 class="paper-title">SpaCor: A Tool for High-Quality Spatial NLQ Corpus Construction</h5>
