--- a/program_full_detail.html
+++ b/program_full_detail.html
@@ -246,7 +246,7 @@
     </tr>
     <tr class="keynote">
       <td class="time-column">10:00-11:00</td>
-      <td class="session-column" colspan="2"><span class="long-paper"><a href="keynotes.html#keynote1">Keynote Talk #1: Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</a></span>Prof. Hirozumi Yamaguchi (Osaka University)</td>
+      <td class="session-column" colspan="2"><span class="long-paper"><a href="keynotes.html#keynote1">Keynote Talk #1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</a></span>Prof. Hirozumi Yamaguchi (Osaka University)</td>
     </tr>
     <tr class="social">
       <td class="time-column">11:00-11:20</td>
@@ -280,9 +280,8 @@
     </tr>
     <tr class="tutorial">
       <td class="time-column">13:45-15:10</td>
-      <td class="session-column"><span class="session-title">Tutorial 1</span></td>
-      <td class="details-column">
-        <span class="long-paper">Spatial Regionalization: Algorithms and Challenges</span>
+      <td class="session-column" colspan="2">
+        <span class="long-paper"><a href="tutorials.html#t1">Tutorial 1 - Spatial Regionalization: Algorithms and Challenges</a></span>
         <span class="author">Amr Magdy (University of California, Riverside)*; Yongyi Liu (University of California, Riverside)</span>
       </td>
     </tr>
@@ -303,9 +302,8 @@
     </tr>
     <tr class="tutorial">
       <td class="time-column">16:30-17:55</td>
-      <td class="session-column"><span class="session-title">Tutorial 2</span></td>
-      <td class="details-column">
-        <span class="long-paper">Heterogeneity in Multivariate Time Series: Comprehensive Analysis and Adaptive Modeling</span>
+      <td class="session-column" colspan="2"><span class="long-paper"><a href="tutorials.html#t2">Tutorial 2 -
+        Heterogeneity in Multivariate Time Series: Comprehensive Analysis and Adaptive Modeling</a></span>
 <span class="author">Zezhi Shao (Institute of Computing Technology, Chinese Academy of Sciences)*; Chengqing Yu (Institute of Computing Technology, Chinese Academy of Sciences; University of Chinese Academy of Sciences); Fei Wang ( Institute of Computing Technology, Chinese Academy of Sciences)</span>
 
       </td>
@@ -333,7 +331,7 @@
   <tbody>
     <tr class="keynote">
       <td class="time-column">09:00–10:00</td>
-      <td class="session-column" colspan="2"><span class="long-paper"> <a href="keynotes.html#keynote2">Keynote Talk #2: Mapping Cultural Values Across Regions for AI Alignment</a></span>Prof. Xing Xie (Microsoft Research Asia)</td>
+      <td class="session-column" colspan="2"><span class="long-paper"> <a href="keynotes.html#keynote2">Keynote Talk #2 - Mapping Cultural Values Across Regions for AI Alignment</a></span>Prof. Xing Xie (Microsoft Research Asia)</td>
     </tr>
     <tr class="social">
       <td class="time-column">10:00–10:20</td>
@@ -352,9 +350,8 @@
     </tr>
     <tr class="tutorial">
       <td class="time-column">11:00–12:25</td>
-      <td class="session-column"><span class="session-title">Tutorial 3</span></td>
-      <td class="details-column">
-        <span class="long-paper">LLMs Meet Cross-Modal Time Series Analytics: Overview and Directions</span>
+      <td class="session-column" colspan="2">
+        <span class="long-paper"><a href="tutorials.html#t3">Tutorial 3 - LLMs Meet Cross-Modal Time Series Analytics: Overview and Directions</a></span>
         <span class="author">Chenxi Liu (Nanyang Technological University)*; Hao Miao (Aalborg University); Cheng Long (Nanyang Technological University); Yan Zhao (University of Electronic Science and Technology of China); Ziyue Li (Technical University of Munich); Panos Kalnis (King Abdullah University of Science and Technology)</span>
       </td>
     </tr>
@@ -364,9 +361,8 @@
     </tr>
     <tr class="tutorial">
       <td class="time-column">13:25–14:50</td>
-      <td class="session-column"><span class="session-title">Tutorial 4</span></td>
-      <td class="details-column">
-        <span class="long-paper">Learning from Spatio-Temporal Data in the LLM Era: Foundations, Models, and Emerging Trends</span>
+      <td class="session-column" colspan="2">
+        <span class="long-paper"><a href="tutorials.html#t4">Tutorial 4 - Learning from Spatio-Temporal Data in the LLM Era: Foundations, Models, and Emerging Trends</a></span>
         <span class="author">Zijian Zhang (Jilin University )*; Xiao Han (City University of Hong Kong); Xiangyu Zhao (City University of Hong Kong); Chenjuan Guo (East China Normal University); Bin Yang (East China Normal University)</span>
       </td>
     </tr>
@@ -439,9 +435,9 @@ Mentor: Hua Lu (Aalborg University, Denmark)</p></td>
     </tr>
     <tr class="tutorial">
       <td class="time-column">10:40-12:05</td>
-      <td class="session-column"><span class="session-title">Tutorial 5</span></td>
-      <td class="details-column">
-        <span class="long-paper">Towards Foundation Model for Spatiotemporal Data Analysis</span>
+      <td class="session-column" colspan="2">
+      
+        <span class="long-paper"><a href="tutorials.html#t5">Tutorial 5 - Towards Foundation Model for Spatiotemporal Data Analysis</a></span>
         <span class="author">Yuankai Wu (Sichuan University)*; Dingyi Zhuang (Massachusetts Institute of Technology); Xinyu Chen (Massachusetts Institute of Technology)</span>
       </td>
     </tr>
@@ -462,7 +458,7 @@ Mentor: Hua Lu (Aalborg University, Denmark)</p></td>
     </tr>
     <tr class="default">
       <td class="time-column">14:05–15:20</td>
-      <td class="session-column" colspan="2"><span class="long-paper"><a href="panel.html#panel1">Panel Discussion: My Classic Papers in Spatial and Spatiotemporal Data</a></span></td>
+      <td class="session-column" colspan="2"><span class="long-paper"><a href="panel.html#panel1">Panel Discussion - My Classic Papers in Spatial and Spatiotemporal Data</a></span></td>
     </tr>
     <tr class="default">
       <td class="time-column">15:20–15:30</td>
