update author affiliation

--- a/program_full_detail.html
+++ b/program_full_detail.html
@@ -352,7 +352,7 @@
       <td class="time-column">11:00–12:25</td>
       <td class="session-column" colspan="2">
         <span class="long-paper"><a href="tutorials.html#t3">Tutorial 3 - LLMs Meet Cross-Modal Time Series Analytics: Overview and Directions</a></span>
-        <span class="author">Chenxi Liu (Nanyang Technological University)*; Hao Miao (Aalborg University); Cheng Long (Nanyang Technological University); Yan Zhao (University of Electronic Science and Technology of China); Ziyue Li (Technical University of Munich); Panos Kalnis (King Abdullah University of Science and Technology)</span>
+        <span class="author">Chenxi Liu (Nanyang Technological University)*; Hao Miao (Hong Kong Polytechnic University); Cheng Long (Nanyang Technological University); Yan Zhao (University of Electronic Science and Technology of China); Ziyue Li (Technical University of Munich); Panos Kalnis (King Abdullah University of Science and Technology)</span>
       </td>
     </tr>
     <tr class="social">
