--- a/program_full_detail.html
+++ b/program_full_detail.html
@@ -246,7 +246,7 @@
     </tr>
     <tr class="keynote">
       <td class="time-column">10:00-11:00</td>
-      <td class="session-column" colspan="2"><span class="long-paper"><a href="keynotes.html#keynote1">Keynote Talk #1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</a></span>Prof. Hirozumi Yamaguchi (Osaka University)<span class="author">Session Chair: Hamada  Rizk (The University of Osaka; RIKEN Center for Computational Science, Japan) </span></td>
+      <td class="session-column" colspan="2"><span class="long-paper"><a href="keynotes.html#keynote1">Keynote Talk #1 - Engineering the Digital Twin Society: Harnessing Spatiotemporal Data through AI</a></span>Prof. Hirozumi Yamaguchi (Osaka University)<span class="author">Session Chair: Hamada  Rizk, Osaka University, Japan </span></td>
     </tr>
     <tr class="social">
       <td class="time-column">11:00-11:20</td>
@@ -331,7 +331,7 @@
   <tbody>
     <tr class="keynote">
       <td class="time-column">09:00–10:00</td>
-      <td class="session-column" colspan="2"><span class="long-paper"> <a href="keynotes.html#keynote2">Keynote Talk #2 - Mapping Cultural Values Across Regions for AI Alignment</a></span>Prof. Xing Xie (Microsoft Research Asia)<span class="author">Session Chair: Raymond Chi-Wing Wong (The Hong Kong University of Science and Technology, Hong Kong) </span></td>
+      <td class="session-column" colspan="2"><span class="long-paper"> <a href="keynotes.html#keynote2">Keynote Talk #2 - Mapping Cultural Values Across Regions for AI Alignment</a></span>Prof. Xing Xie (Microsoft Research Asia)<span class="author">Session Chair: Raymond Chi-Wing Wong, The Hong Kong University of Science and Technology, Hong Kong </span></td>
     </tr>
     <tr class="social">
       <td class="time-column">10:00–10:20</td>
